rgbds-0.6.1/test/link/rst-bad.out
error: rst-bad.asm(2): Value 1 is not a RST vector
Linking failed with 1 error
