rgbds-0.6.1/test/link/rst-bad.asm
SECTION "bad", ROM0[0]
	rst bad
bad: ; This is not at a RST vector!
